# scupt-raft

./: .gitignore  Cargo.toml  Dockerfile  README.md  prerequisite.dockerfile  test.dockerfile
data/: injection_event_1.json  injection_event_2.json  injection_event_3.json  injection_event_4.json  injection_trace_1.json  raft_1node_trace_1.db  raft_1node_vote_trace_1.db  raft_abstract_trace.json  raft_map_const.json  raft_trace.json  test_trace.json
doc/: coverage.md
script/: coverage.sh  env.sh  split_sqlite.py
src/: channel.rs  check_invariants.rs  injection.rs  lib.rs  msg_dtm_testing.rs  msg_fuzzy_testing.rs  msg_raft_state.rs  raft_config.rs  raft_event.rs  raft_message.rs  raft_role.rs  raft_state.rs  sm_node.rs  sm_store.rs  snapshot.rs  state_machine.rs  test_action_input.rs  test_action_read.rs  test_config.rs  test_dtm.rs  test_dtm_trace_to_event.rs  test_event_handler.rs  test_fuzzy_inner.rs  test_injection.rs  test_message.rs  test_path.rs  test_raft_1node.rs  test_raft_abstract.rs  test_raft_all.rs  test_raft_dtm_json.rs  test_raft_dtm_random.rs  test_raft_fuzzy.rs  test_raft_fuzzy_with_init_state.rs  test_raft_node.rs  test_raft_vote.rs  test_replicate.rs  test_sm_store.rs  test_store_simple.rs
tests/: test.rs
